# mockr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/mockr/: app.py  utils.py
